@@ -1,0 +1,3 @@
+There are 2 versions of the program 32 bit and 64 bit.
+
+Important: **If you have a 64-bit operating system and a 32-bit process is running, information about it can be obtained from the 32-bit version of the program**
